nenolod     2007/05/26 03:42:03 UTC	(20070526-8325)
  Log:
  - fix grammar in wallops notice
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ns_ratelimitreg.c (File Modified) 


jilles      2007/05/24 23:44:48 UTC	(20070524-8323)
  Log:
  In the "address chanserv" style of fantasy commands,
  require the first word to start with chanserv's nick
  instead of just containing it. This ensures stuff like
  /chanserv op #somechan (e.g. for helping users with
  chanserv commands) is not interpreted as a fantasy
  command.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 


jilles      2007/05/24 20:10:59 UTC	(20070524-8321)
  Log:
  Don't allow dropping an account or channel with the HOLD flag set.
  

  Changes:	Modified:
  +6 -0		trunk/modules/chanserv/drop.c (File Modified) 
  +6 -0		trunk/modules/nickserv/drop.c (File Modified) 


jilles      2007/05/24 20:09:37 UTC	(20070524-8319)
  Log:
  Allow per-channel redefinition of xOP templates.
  (Because of r8307, this also affects the xOP commands.)
  

  Changes:	Modified:
  +23 -15	trunk/modules/chanserv/template.c (File Modified) 
  +10 -7	trunk/src/template.c (File Modified) 


jilles      2007/05/24 20:02:59 UTC	(20070524-8317)
  Log:
  nickserv hold: use account name, not specified name in
  messages/logs.
  

  Changes:	Modified:
  +8 -8		trunk/modules/nickserv/hold.c (File Modified) 


jilles      2007/05/24 16:45:39 UTC	(20070524-8315)
  Log:
  Convert disabled cloaks to marks.
  

  Changes:	Modified:
  +18 -2	trunk/contrib/hybservtoatheme.pl (File Modified) 


jilles      2007/05/22 22:30:16 UTC	(20070522-8313)
  Log:
  anope_convert:
  - fix enc_old passwords with anope 1.7.18
  - default to 1.7.x instead of 1.6.x
  

  Changes:	Modified:
  +14 -1	trunk/contrib/anope_convert.c (File Modified) 


jilles      2007/05/22 22:02:34 UTC	(20070522-8311)
  Log:
  Convert theia extendchans flag.
  

  Changes:	Modified:
  +2 -0		trunk/contrib/hybservtoatheme.pl (File Modified) 

